--- a/Breaking/app/src/main/res/values/colors.xml
+++ b/Breaking/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="kakao_container">#FEE500</color>
+    <color name="google_container">#FFFFFF</color>
 </resources>
