--- a/Breaking/app/src/main/res/layout/custom_dialog_multiple_button.xml
+++ b/Breaking/app/src/main/res/layout/custom_dialog_multiple_button.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp"
         android:gravity="center"
         android:padding="15dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold" />
     <LinearLayout
