chore: string, color, gradle, manifest settings

--- a/Breaking/app/src/main/res/values/colors.xml
+++ b/Breaking/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="breaking_color">#014D91</color>
+    <color name="breaking_drawer_color">#2D375B</color>
+    <color name="breaking_bottom_clicked_color">#FF9800</color>
     <color name="sign_up_input_background_color">#EEEEEE</color>
     <color name="sign_up_input_hint_text_color">#8E8E8E</color>
     <color name="sign_up_button_background_color">#93C7F6</color>
