style: remove main toolbar and add newly custom toolbar

--- a/Breaking/app/src/main/res/layout/activity_main.xml
+++ b/Breaking/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,16 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tool_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="?attr/actionBarTheme"
-            android:background="@color/breaking_color"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-        </androidx.appcompat.widget.Toolbar>
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/tool_bar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:theme="?attr/actionBarTheme"-->
+<!--            android:background="@color/breaking_color"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent">-->
+<!--        </androidx.appcompat.widget.Toolbar>-->
 
         <FrameLayout
             android:id="@+id/fl_board"
