--- a/Breaking/app/src/main/res/layout/fragment_navi_user.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_user.xml
@@ -1,18 +1,246 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".fragment.NaviUserFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_page_tool_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="브레이킹 유저 화면입니다."
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:background="@color/white"
+        android:elevation="2dp"
+        app:menu="@menu/title_menu"
+        app:title="마이페이지"
+        app:titleTextColor="@color/black" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btn_edit_profile"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/my_profile_edit_profile_btn_background"
+            android:text="@string/edit_profile"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@id/imgv_my_page_profile"
+            app:layout_constraintHeight_percent="0.03"
+            app:layout_constraintLeft_toRightOf="@id/imgv_my_page_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_my_page_status"
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintWidth_percent="0.6" />
+
+        <GridView
+            android:id="@+id/gv_feed_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_btn_written" />
+
+        <ImageButton
+            android:id="@+id/img_btn_written"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/feed_category_button_background"
+            android:src="@drawable/ic_baseline_create_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider"
+            app:layout_constraintVertical_bias="0.02"
+            app:layout_constraintWidth_percent="0.15" />
+
+        <ImageButton
+            android:id="@+id/img_btn_bought"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/feed_category_button_background"
+            android:src="@drawable/ic_baseline_add_shopping_cart_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider"
+            app:layout_constraintVertical_bias="0.02"
+            app:layout_constraintWidth_percent="0.15" />
+
+        <ImageButton
+            android:id="@+id/img_btn_bookmark"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/feed_category_button_background"
+            android:src="@drawable/ic_baseline_bookmark_border_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider"
+            app:layout_constraintVertical_bias="0.02"
+            app:layout_constraintWidth_percent="0.15" />
+
+        <ImageView
+            android:id="@+id/imgv_my_page_profile"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/ic_default_profile_image"
+            android:cropToPadding="true"
+            android:scaleType="fitXY"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.3" />
+
+        <TextView
+            android:id="@+id/tv_my_page_nickname"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:padding="5dp"
+            android:text="@string/nickname"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/imgv_my_page_profile"
+            app:layout_constraintLeft_toRightOf="@id/imgv_my_page_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintWidth_percent="0.6" />
+
+        <TextView
+            android:id="@+id/tv_my_page_status"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:padding="5dp"
+            android:text="@string/status_msg"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/imgv_my_page_profile"
+            app:layout_constraintLeft_toRightOf="@id/imgv_my_page_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_my_page_nickname"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintWidth_percent="0.6" />
+
+        <TextView
+            android:id="@+id/tv_follow_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="@string/follow"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintLeft_toLeftOf="@id/imgv_my_page_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgv_my_page_profile" />
+
+        <TextView
+            android:id="@+id/tv_follow_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="11sp"
+            app:layout_constraintLeft_toLeftOf="@id/tv_follow_title"
+            app:layout_constraintRight_toRightOf="@id/tv_follow_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_follow_title" />
+
+        <TextView
+            android:id="@+id/tv_follower_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="@string/follower"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintLeft_toLeftOf="@id/imgv_my_page_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgv_my_page_profile" />
+
+        <TextView
+            android:id="@+id/tv_follower_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="11sp"
+            app:layout_constraintLeft_toLeftOf="@id/tv_follower_title"
+            app:layout_constraintRight_toRightOf="@id/tv_follower_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_follower_title" />
+
+        <TextView
+            android:id="@+id/tv_post_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="@string/written_post"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintLeft_toLeftOf="@id/imgv_my_page_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgv_my_page_profile" />
+
+        <TextView
+            android:id="@+id/tv_post_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="11sp"
+            app:layout_constraintLeft_toLeftOf="@id/tv_post_title"
+            app:layout_constraintRight_toRightOf="@id/tv_post_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_post_title" />
+
+        <View
+            android:layout_width="0.3dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/sign_up_input_hint_text_color"
+            app:layout_constraintBottom_toBottomOf="@id/divider"
+            app:layout_constraintHeight_percent="0.04"
+            app:layout_constraintHorizontal_bias="0.36"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgv_my_page_profile"
+            app:layout_constraintVertical_bias="0.35" />
+
+        <View
+            android:layout_width="0.3dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/sign_up_input_hint_text_color"
+            app:layout_constraintBottom_toBottomOf="@id/divider"
+            app:layout_constraintHeight_percent="0.04"
+            app:layout_constraintLeft_toLeftOf="@id/tv_follow_title"
+            app:layout_constraintRight_toRightOf="@id/tv_follower_title"
+            app:layout_constraintTop_toBottomOf="@id/imgv_my_page_profile"
+            app:layout_constraintVertical_bias="0.35" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:layout_marginTop="25dp"
+            android:background="@color/sign_up_input_hint_text_color"
+            app:layout_constraintTop_toBottomOf="@id/tv_follow_value" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
