feat: implement can swipe each post layout using view pager and tab layout in middle section of user page

--- a/Breaking/app/src/main/res/layout/fragment_navi_user.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_user.xml
@@ -36,61 +36,61 @@
             app:layout_constraintVertical_bias="1.0"
             app:layout_constraintWidth_percent="0.6" />
 
-        <GridView
-            android:id="@+id/gv_feed_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:numColumns="2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_btn_written" />
+        <!--        <GridView-->
+        <!--            android:id="@+id/gv_feed_list"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:numColumns="2"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/img_btn_written" />-->
 
-        <ImageButton
-            android:id="@+id/img_btn_written"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/feed_category_button_background"
-            android:src="@drawable/ic_baseline_create_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.05"
-            app:layout_constraintHorizontal_bias="0.3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider"
-            app:layout_constraintVertical_bias="0.02"
-            app:layout_constraintWidth_percent="0.15" />
-
-        <ImageButton
-            android:id="@+id/img_btn_bought"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/feed_category_button_background"
-            android:src="@drawable/ic_baseline_add_shopping_cart_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.05"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider"
-            app:layout_constraintVertical_bias="0.02"
-            app:layout_constraintWidth_percent="0.15" />
-
-        <ImageButton
-            android:id="@+id/img_btn_bookmark"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/feed_category_button_background"
-            android:src="@drawable/ic_baseline_bookmark_border_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.05"
-            app:layout_constraintHorizontal_bias="0.7"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider"
-            app:layout_constraintVertical_bias="0.02"
-            app:layout_constraintWidth_percent="0.15" />
-
+<!--        <ImageButton-->
+<!--            android:id="@+id/img_btn_written"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:background="@drawable/feed_category_button_background"-->
+<!--            android:src="@drawable/ic_baseline_create_24"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHeight_percent="0.05"-->
+<!--            app:layout_constraintHorizontal_bias="0.3"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/divider"-->
+<!--            app:layout_constraintVertical_bias="0.02"-->
+<!--            app:layout_constraintWidth_percent="0.15" />-->
+<!---->
+<!--        <ImageButton-->
+<!--            android:id="@+id/img_btn_bought"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:background="@drawable/feed_category_button_background"-->
+<!--            android:src="@drawable/ic_baseline_add_shopping_cart_24"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHeight_percent="0.05"-->
+<!--            app:layout_constraintHorizontal_bias="0.5"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/divider"-->
+<!--            app:layout_constraintVertical_bias="0.02"-->
+<!--            app:layout_constraintWidth_percent="0.15" />-->
+<!---->
+<!--        <ImageButton-->
+<!--            android:id="@+id/img_btn_bookmark"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:background="@drawable/feed_category_button_background"-->
+<!--            android:src="@drawable/ic_baseline_bookmark_border_24"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHeight_percent="0.05"-->
+<!--            app:layout_constraintHorizontal_bias="0.7"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/divider"-->
+<!--            app:layout_constraintVertical_bias="0.02"-->
+<!--            app:layout_constraintWidth_percent="0.15" />-->
+<!---->
         <ImageView
             android:id="@+id/imgv_my_page_profile"
             android:layout_width="0dp"
@@ -241,6 +241,24 @@
             android:layout_marginTop="25dp"
             android:background="@color/sign_up_input_hint_text_color"
             app:layout_constraintTop_toBottomOf="@id/tv_follow_value" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            app:tabIndicatorHeight="5dp"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/breaking_color"
+            app:layout_constraintTop_toBottomOf="@id/divider" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
