--- a/Breaking/app/src/main/res/layout/fragment_navi_user.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_user.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragment.NaviUserFragment">
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_page_tool_bar"
@@ -36,24 +35,40 @@
             app:layout_constraintVertical_bias="1.0"
             app:layout_constraintWidth_percent="0.6" />
 
+        <Button
+            android:id="@+id/btn_follow"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/sign_up_user_type_selected"
+            android:text="@string/follow"
+            android:textColor="@color/sign_up_user_type_text_color"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_my_page_nickname"
+            app:layout_constraintHeight_percent="0.035"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintLeft_toRightOf="@id/tv_my_page_nickname"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_my_page_nickname"
+            app:layout_constraintWidth_percent="0.15" />
+
         <ImageView
             android:id="@+id/img_view_my_page_profile"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
+            android:adjustViewBounds="true"
             android:background="@drawable/ic_default_profile_image"
             android:cropToPadding="true"
             android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.3" />
+            app:layout_constraintWidth_percent="0.25" />
 
         <TextView
             android:id="@+id/tv_my_page_nickname"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="start"
             android:padding="5dp"
@@ -62,11 +77,11 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/img_view_my_page_profile"
+            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintLeft_toRightOf="@id/img_view_my_page_profile"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintWidth_percent="0.6" />
+            app:layout_constraintVertical_bias="0.2" />
 
         <TextView
             android:id="@+id/tv_my_page_status"
@@ -77,17 +92,16 @@
             android:text="@string/status_msg"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@id/img_view_my_page_profile"
-            app:layout_constraintLeft_toRightOf="@id/img_view_my_page_profile"
+            app:layout_constraintLeft_toLeftOf="@id/tv_my_page_nickname"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_my_page_nickname"
-            app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintWidth_percent="0.6" />
+            app:layout_constraintTop_toTopOf="@id/img_view_my_page_profile"
+            app:layout_constraintVertical_bias="0.6" />
 
         <TextView
             android:id="@+id/tv_follow_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="@string/follow"
             android:textColor="@color/black"
             android:textSize="12sp"
@@ -111,7 +125,7 @@
             android:id="@+id/tv_follower_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="@string/follower"
             android:textColor="@color/black"
             android:textSize="12sp"
@@ -135,7 +149,7 @@
             android:id="@+id/tv_post_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="@string/written_post"
             android:textColor="@color/black"
             android:textSize="12sp"
