--- a/Breaking/app/src/main/res/layout/fragment_navi_home.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_home.xml
@@ -25,8 +25,8 @@
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fab_posting"
-            android:layout_width="130dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:gravity="center"
             android:theme="@style/FormButton"
             android:text="@string/post_home_btn"
@@ -36,6 +36,8 @@
             android:backgroundTint="@color/main_post_button_color"
             android:layout_marginBottom="80dp"
             app:strokeColor="@color/breaking_drawer_color"
+            app:layout_constraintWidth_percent="0.3"
+            app:layout_constraintHeight_percent="0.06"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
