feat: Implement Posting field processing (#54)
* chore: changed gradle, colors, icons

* feat: added key at ValueUtil and various components at Utils

* feat: implemented post field validation and modified comment sign up validation

* feat: implemented media recyclerView and postActivity.kt

* feat: added Data class about Posting

* chore: added error field & file select exception & change bias of floating button

--- a/Breaking/app/src/main/res/values/colors.xml
+++ b/Breaking/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="sign_up_user_type_text_color">#014D91</color>
     <color name="sign_up_input_error_text_color">#FF0000</color>
     <color name="main_post_button_color">#EFF9FF</color>
+    <color name="post_upload_count_color">#7A7777</color>
     <color name="kakao_container">#FEE500</color>
     <color name="google_container">#FFFFFF</color>
     <color name="follow_list_background_color">#F3F7FA</color>
