chore: changed string and colors, manifest, added gradle configuration, icons

--- a/Breaking/app/src/main/res/values/colors.xml
+++ b/Breaking/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="kakao_container">#FEE500</color>
     <color name="google_container">#FFFFFF</color>
     <color name="follow_list_background_color">#F3F7FA</color>
+    <color name="page_number_enable_false_color">#C8C3C3</color>
 </resources>
