fix: hide modify, delete menu in popup menu

--- a/Breaking/app/src/main/res/layout/custom_main_feed_popup.xml
+++ b/Breaking/app/src/main/res/layout/custom_main_feed_popup.xml
@@ -18,6 +18,7 @@
             android:background="@drawable/none_background_click_background"
             android:clickable="true"
             android:orientation="horizontal"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/layout_horiz_delete"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -54,6 +55,7 @@
             android:background="@drawable/none_background_click_background"
             android:clickable="true"
             android:orientation="horizontal"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/layout_horiz_bookmark"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="parent"
